--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
-    implementation "androidx.activity:activity-ktx:1.2.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
+    if (findProperty("app.useNewVersions") == "true") {
+        println "Using NEW library versions"
+        implementation "androidx.activity:activity-ktx:1.2.1"
+        implementation "androidx.fragment:fragment-ktx:1.3.1"
+    } else {
+        println "Using OLD library versions"
+        implementation "androidx.activity:activity-ktx:1.1.0"
+        implementation "androidx.fragment:fragment-ktx:1.2.5"
+    }
 }
